button spacing fixed

--- a/assets/css/account/login.scss
+++ b/assets/css/account/login.scss
@@ -16,6 +16,10 @@
         width: 300px;
       }
     }
+
+    p + button {
+      margin-top: 0;
+    }
   }
   .form-errors {
     p {
